[영진]헤더js, 푸터, 마이페이지 등

--- a/hositamtam/src/main/webapp/css/myPage.css
+++ b/hositamtam/src/main/webapp/css/myPage.css
@@ -103,7 +103,7 @@ a {
 }
 .mylevel__gage__value {
   height: 30px;
-  padding-top: 7px;
+  padding-top: 0.3rem;
   color: var(--color-background);
   border-radius: 5px;
 }
