--- a/hositamtam/src/main/webapp/css/whiteBgHeader.css
+++ b/hositamtam/src/main/webapp/css/whiteBgHeader.css
@@ -51,6 +51,7 @@ ul {
   background-color: var(--color-background);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  transition: all 200ms ease-in;
 }
 
 .mainHeader__logo__img {
