메인 옆 카테고리 배경, 점포등록 호버

--- a/hositamtam/src/main/webapp/css/main.css
+++ b/hositamtam/src/main/webapp/css/main.css
@@ -196,21 +196,26 @@ font-size: 2rem;
   display: flex;
   justify-content: flex-end;
   padding-right: 20px;
-        width: 550px; 
-        height: 100vh; 
-        background: radial-gradient( #0E4194, #0188CC  );
-   
+        width: 400px; 
+        height: 90vh; 
+       /* background: radial-gradient( #0E4194, #0188CC  );*/
+        /*background: #333333;*/
+   background-image: url('../images/busanposter.png');
+  background-size: cover;  
+  /*background-position: center; */ 
+  background-repeat: no-repeat;  
+  background-color: #0188CC;
         position: fixed; 
         z-index: 5;
         color: white;
         right: 0;
         text-align: right;
-        
+        bottom: 0;
         transition : all 0.5s;
         transform: translateX(550px);
 }
 .goCategory{
-  line-height: 80px;
+  line-height: 60px;
   
   padding: 10px;
 }
@@ -230,7 +235,8 @@ font-size: 2rem;
   transform: translateX(0px);
 }
 .listCategoryContent{
-  font-size: 2.5rem;
+  font-size: 1.5rem;
+  z-index: 10;
   
 }
 
