--- a/hositamtam/src/main/webapp/css/postMain.css
+++ b/hositamtam/src/main/webapp/css/postMain.css
@@ -21,7 +21,7 @@ body {
       margin-top: 3rem;
       padding-top: 10px;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       position: relative;
       
   }
