--- a/hositamtam/src/main/webapp/css/postMain.css
+++ b/hositamtam/src/main/webapp/css/postMain.css
@@ -23,6 +23,7 @@ body {
       width: 100%;
       height: 100vh;
       position: relative;
+      margin-bottom: 100px;
       
   }
 
@@ -35,6 +36,10 @@ td a{
 }
 td,tr{
 	text-align: center;
+}
+td {
+	min-height: 50px;
+	height: 60px;
 }
 button {
 	display: inline-block;
@@ -228,10 +233,17 @@ th {
     padding: 5px;
     border-bottom: 1px solid #0e4194;     
     }
-.ptitle {
+.pTitle {
+	 padding: 5px;
+	text-align: center;
+	width: 250px;
+	 
+    
+}
+.pContent {
 	 padding: 5px;
 	text-align: left;
-	min-width: 600px; 
+	min-width: 400px; 
     
 }
 
