경인 - 리뷰 별 수정 + postList.js 수정

--- a/hositamtam/src/main/webapp/css/storeDetail.css
+++ b/hositamtam/src/main/webapp/css/storeDetail.css
@@ -389,3 +389,22 @@ a {
 }
 
 
+
+#ratingStar {
+    display: inline-block;
+    direction: rtl;
+}
+#ratingStar input[type=radio]{
+    display: none;
+}
+#ratingStar label{
+    font-size: 3em;
+    color: transparent;
+    text-shadow: 0 0 0 #ddd;
+}
+#ratingStar input[type=radio]:checked ~ label{
+    text-shadow: 0 0 0 gold;
+}
+.spanStar {
+    color: gold;
+}
