--- a/hositamtam/src/main/webapp/css/storeInsertAndUpdate.css
+++ b/hositamtam/src/main/webapp/css/storeInsertAndUpdate.css
@@ -44,7 +44,7 @@ body {
 /* Store Insert And Update */
 #store__update {
   display: flex;
-  height: 1116px;
+  height: 70rem;
   margin: auto;
 }
 
